@@ -32,9 +32,9 @@
 #include <libfmapi_crc.h>
 #include <libfmapi_definitions.h>
 #include <libfmapi_entry_identifier.h>
-#include <libfmapi_guid.h>
 #include <libfmapi_lzfu.h>
 #include <libfmapi_property_type.h>
+#include <libfmapi_one_off_entry_identifier.h>
 #include <libfmapi_service_provider_identifier.h>
 #include <libfmapi_types.h>
 #include <libfmapi_value_type.h>
