@@ -4,6 +4,7 @@ EXTRA_DIST = \
 	liberror/liberror.vcproj \
 	libfdatetime/libfdatetime.vcproj \
 	libfguid/libfguid.vcproj \
+	libfwnt/libfwnt.vcproj \
 	libfmapi/libfmapi.vcproj \
 	libnk2_dll/libnk2_dll.vcproj \
 	libnotify/libnotify.vcproj \
