@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9,00"
-	Name="libbfio"
-	ProjectGUID="{41CFAFBF-A1C8-4704-AFEF-31979E6452B9}"
-	RootNamespace="libbfio"
+	Name="libfwnt"
+	ProjectGUID="{9D37639F-1694-47DF-84BF-336D98E0639F}"
+	RootNamespace="libfwnt"
 	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
@@ -39,8 +39,8 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..\..\include;..\..\common;..\..\libcstring;..\..\liberror;..\..\libuna"
-				PreprocessorDefinitions="_CRT_SECURE_NO_DEPRECATE;HAVE_LOCAL_LIBUNA;HAVE_LOCAL_LIBBFIO"
+				AdditionalIncludeDirectories="..\..\include;..\..\common;..\..\libcstring;..\..\liberror"
+				PreprocessorDefinitions="_CRT_SECURE_NO_DEPRECATE;HAVE_LOCAL_LIBFWNT"
 				RuntimeLibrary="2"
 				WarningLevel="4"
 				CompileAs="1"
@@ -56,7 +56,7 @@
 			/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="$(OutDir)\libbfio.lib"
+				OutputFile="$(OutDir)\libfwnt.lib"
 				ModuleDefinitionFile=""
 				IgnoreAllDefaultLibraries="false"
 			/>
@@ -86,43 +86,15 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath="..\..\libbfio\libbfio_error.c"
+				RelativePath="..\..\libfwnt\libfwnt_error.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libbfio\libbfio_error_string.c"
+				RelativePath="..\..\libfwnt\libfwnt_security_identifier.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libbfio\libbfio_file.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libbfio\libbfio_handle.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libbfio\libbfio_legacy.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libbfio\libbfio_list_type.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libbfio\libbfio_memory_range.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libbfio\libbfio_offset_list.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libbfio\libbfio_pool.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libbfio\libbfio_support.c"
+				RelativePath="..\..\libfwnt\libfwnt_support.c"
 				>
 			</File>
 		</Filter>
@@ -132,59 +104,27 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath="..\..\libbfio\libbfio_definitions.h"
+				RelativePath="..\..\libfwnt\libfwnt_definitions.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libbfio\libbfio_error.h"
+				RelativePath="..\..\libfwnt\libfwnt_error.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libbfio\libbfio_error_string.h"
+				RelativePath="..\..\libfwnt\libfwnt_extern.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libbfio\libbfio_extern.h"
+				RelativePath="..\..\libfwnt\libfwnt_security_identifier.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libbfio\libbfio_file.h"
+				RelativePath="..\..\libfwnt\libfwnt_support.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libbfio\libbfio_handle.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libbfio\libbfio_legacy.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libbfio\libbfio_libuna.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libbfio\libbfio_list_type.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libbfio\libbfio_memory_range.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libbfio\libbfio_offset_list.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libbfio\libbfio_pool.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libbfio\libbfio_support.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libbfio\libbfio_types.h"
+				RelativePath="..\..\libfwnt\libfwnt_types.h"
 				>
 			</File>
 		</Filter>
